# cairo-run

./: README.md  Scarb.toml  main.py  pyproject.toml
.trunk/: trunk.yaml
src/: lib.cairo
